--- a/sisters0site/sisters-cv/package.json
+++ b/sisters0site/sisters-cv/package.json
@@ -2,11 +2,9 @@
   "name": "sisters-cv",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://ivanpohorilyi.github.io/pohorila-portfolio.github.io",
+  "homepage": "https://ivanpohorilyi.github.io/oleksandra-pohorila-cv-build/",
   "type": "module",
   "scripts": {
-    "predeploy": "yarn dev build",
-    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
